# contest-sigmod2025

./: .clang-format  .clangd  .gitignore  .gitlab-ci.yml  ANNOUNCEMENTS.md  CMakeLists.txt  LICENSE.txt  README.md  checkglobals.sh  checknolib.sh  download_imdb.sh  duckdbrunner.py  listincludes.sh  plans.json  querygen2.py  schema.json  templates.json
engine/: .clang-format  Config.hpp  Execute.cpp  Execute.hpp  genpipelines.py
engine/infra/: AdressSanitizer.hpp  BitSet.hpp  JoinFilter.cpp  JoinFilter.hpp  Mmap.cpp  Mmap.hpp  PageMemory.cpp  PageMemory.hpp  QueryMemory.cpp  QueryMemory.hpp  Random.hpp  Reflection.hpp  Scheduler.cpp  Scheduler.hpp  SmallVec.hpp  UnionFind.hpp  Util.hpp
engine/infra/helper/: BitOps.hpp  Misc.hpp  Span.hpp
engine/op/: CollectorTarget.cpp  CollectorTarget.hpp  Hashtable.cpp  Hashtable.hpp  OpBase.cpp  OpBase.hpp  ScanBase.cpp  ScanBase.hpp  TableScan.cpp  TableScan.hpp  TableTarget.cpp  TableTarget.hpp  TargetBase.hpp
engine/pipeline/: JoinPipeline.cpp  JoinPipeline.hpp  PipelineConcepts.hpp  PipelineFunction.cpp  PipelineFunction.hpp  PipelineGen.cpp  PipelineGen.hpp  PipelineGen0.cpp  PipelineGen1.cpp  PipelineGen10.cpp  PipelineGen11.cpp  PipelineGen12.cpp  PipelineGen13.cpp  PipelineGen14.cpp  PipelineGen15.cpp  PipelineGen2.cpp  PipelineGen3.cpp  PipelineGen4.cpp  PipelineGen5.cpp  PipelineGen6.cpp  PipelineGen7.cpp  PipelineGen8.cpp  PipelineGen9.cpp
engine/query/: DPccp.hpp  DataSource.cpp  DataSource.hpp  PlanImport.cpp  PlanImport.hpp  QueryGraph.cpp  QueryGraph.hpp  QueryPlan.cpp  QueryPlan.hpp  Restriction.cpp  Restriction.hpp  RuntimeValue.hpp
engine/storage/: BitLogic.cpp  BitLogic.hpp  CopyLogic.cpp  CopyLogic.hpp  RestrictionLogic.cpp  RestrictionLogic.hpp  StringPtr.hpp
engine/test/: unit_tests2.cpp  unit_tests3.cpp
engine/tools/: DuckDB.cpp  DuckDB.hpp  JoinPipelineLoader.cpp  JoinPipelineLoader.hpp  ParsedSQL.cpp  ParsedSQL.hpp  Runner.cpp  SQL.cpp  SQL.hpp  Setting.cpp  Setting.hpp
include/: attribute.h  common.h  csv_parser.h  hardware__ca09.h  hardware__cp02.h  hardware__koroneia.h  hardware__sidon.h  inner_column.h  plan.h  statement.h  table.h  table_entity.h
src/: build_table.cpp  csv_parser.cpp  execute.cpp  statement.cpp
tests/: build_database.cpp  read_sql.cpp  unit_tests.cpp
